--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,14 @@
 }
 
 .label {
+  margin-left: 10px;
   font-size: 1rem;
+}
+
+.input {
+  height: 28px;
+  width: 60px;
+  padding: 2px;
 }
 
 .input-fragment {
