--- a/styles.css
+++ b/styles.css
@@ -47,9 +47,20 @@
   border-radius: 4px;
 }
 
-.mosaic-root {
+.mosaic {
   margin-top: 20px;
   width: 100%;
-  height: 600px;
-  border: 1px solid #A5A5A5;
+}
+
+.table {
+  border: none;
+  width: 100%;
+  border-spacing:0;
+  border-collapse: collapse;
+}
+.table-cell {
+  height: 5px;
+  line-height: 1px;
+  background-color: tomato;
+  border: 1px solid black;
 }
