--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 .main-container {
   margin: 50px auto 0;
   background-color: #f4f9f5;
-  width: 90%;
+  width: 1250px;
 }
 
 .form {
@@ -47,20 +47,20 @@
   border-radius: 4px;
 }
 
-.mosaic {
-  margin-top: 20px;
-  width: 100%;
+.mosaic-root {
+  margin-top: 50px;
+  position: relative;
 }
 
-.table {
-  border: none;
-  width: 100%;
-  border-spacing:0;
-  border-collapse: collapse;
-}
-.table-cell {
-  height: 5px;
-  line-height: 1px;
-  background-color: tomato;
+.cell {
+  z-index: 1;
+  position: absolute;
   border: 1px solid black;
+  background-color: #ffffff;
+}
+
+.cell:focus {
+  outline: 3px solid rgba(218, 165, 32, 0.7);
+  outline-offset: -1px;
+  z-index: 2;
 }
